fix: updated styles and alignments for mobile view

--- a/src/features/searchCityWeather/search.css
+++ b/src/features/searchCityWeather/search.css
@@ -1,11 +1,16 @@
 .searchContainer {
   margin: 5vw auto;
+  padding: 0 12px;
   transition: width 0.8s ease 0.5s;
 }
 
 .searchInput {
-  padding-left: 25px;
+  padding: 10px 25px;
   border-radius: 25px;
+}
+
+.searchInput:focus {
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 
 @media screen and (min-width: 600px) {
